# wiz

./: .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
agents/blog-writer/: CLAUDE.md
agents/bug-fixer/: CLAUDE.md
agents/bug-hunter/: CLAUDE.md
agents/feature-proposer/: CLAUDE.md
agents/reviewer/: CLAUDE.md
agents/social-manager/: CLAUDE.md
config/: wiz.yaml
docs/: google-docs-setup.md
memory/: short-term.md
memory/long-term/: index.md
scripts/: setup.sh  wake.sh
src/wiz/: __init__.py  cli.py  logging_config.py
src/wiz/agents/: __init__.py  base.py  blog_writer.py  bug_fixer.py  bug_hunter.py  feature_proposer.py  rejection_learner.py  reviewer.py  social_manager.py
src/wiz/bridge/: __init__.py  client.py  monitor.py  runner.py  types.py
src/wiz/config/: __init__.py  loader.py  schema.py
src/wiz/coordination/: __init__.py  distributed_lock.py  file_lock.py  github_issues.py  github_prs.py  loop_tracker.py  stagnation.py  strikes.py  worktree.py
src/wiz/integrations/: google_docs.py  image_prompts.py  typefully.py
src/wiz/memory/: __init__.py  long_term.py  rejection_journal.py  session_logger.py  short_term.py
src/wiz/notifications/: __init__.py  telegram.py
src/wiz/orchestrator/: __init__.py  content_pipeline.py  escalation.py  feature_pipeline.py  pipeline.py  rejection_pipeline.py  reporter.py  scheduler.py  self_improve.py  state.py
tests/: conftest.py  test_import.py
tests/e2e/: test_content_cycle.py  test_dev_cycle.py  test_feature_cycle.py
tests/unit/: test_cli.py  test_logging_config.py  test_setup_script.py
(+41 files in other folders)
