[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wiz"
version = "0.1.0"
description = "Persistent self-improving personal AI agent"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "requests>=2.28",
    "websocket-client>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
wiz = "wiz.cli:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests requiring external services",
    "e2e: marks end-to-end tests",
]
